--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -6,4 +6,5 @@
     <string name="spraw">chèque</string>
     <string name="Wartosc_wej">La valeur d\'entrée ne peut pas être vide.</string>
     <string name="Wartosc_wejsciowa_poza_zasiengiem">Valeur d\'entrée au-delà de la plage de conversion par l\'algorithme d\'application.</string>
+    <string name="dzielnik_wynik">diviseur || résultat</string>
 </resources>
