--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -6,4 +6,5 @@
     <string name="spraw">kontrolloni</string>
     <string name="Wartosc_wej">Vlera e hyrjes nuk mund të jetë bosh.</string>
     <string name="Wartosc_wejsciowa_poza_zasiengiem">Vlera e hyrjes përtej intervalit të konvertimit nga algoritmi i aplikacionit.</string>
-    </resources>
+    <string name="dzielnik_wynik">ndarës || rezultojnë</string>
+</resources>
