--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -6,4 +6,5 @@
     <string name="Wartosc_wej">لا يمكن أن تكون قيمة الإدخال فارغة.</string>
     <string name="Wartosc_wejsciowa_poza_zasiengiem">قيمة الإدخال تتجاوز نطاق التحويل بواسطة خوارزمية التطبيق</string>
     <string name="wyniki_dla">نتائج ل</string>
+    <string name="dzielnik_wynik">المقسوم||يؤدي</string>
 </resources>
