--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -6,4 +6,5 @@
     <string name="Wartosc_wejsciowa_poza_zasiengiem">Valor de entrada além do intervalo de conversão pelo algoritmo do aplicativo.</string>
     <string name="dzielniki_liczb">Divisores de números</string>
     <string name="spraw">Verifique</string>
+    <string name="dzielnik_wynik">divisor || resultar</string>
 </resources>
