--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,5 @@
     <string name="spraw">Проверить</string>
     <string name="Wartosc_wej">Входное значение не может быть пустым.</string>
     <string name="Wartosc_wejsciowa_poza_zasiengiem">Входное значение за пределами диапазона преобразования по алгоритму приложения.</string>
+    <string name="dzielnik_wynik">делитель || результат</string>
 </resources>
