--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -7,4 +7,5 @@
     <string name="Wartosc_wejsciowa_poza_zasiengiem">Eingabewert außerhalb des Konvertierungsbereichs durch den Anwendungsalgorithmus.</string>
     <string name="wyniki_dla">Ergebnisse für</string>
     <string name="dzielnik_wynik">Teiler || Ergebnis</string>
+    <string name="pop_up_zamykanie">Zum Schließen erneut drücken.</string>
 </resources>
