--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -7,4 +7,5 @@
     <string name="Wartosc_wejsciowa_poza_zasiengiem">Wartość wejściowa poza zasięgiem przeliczenia przez algorytm aplikacji.</string>
     <string name="spraw">Sprawdź</string>
     <string name="dzielnik_wynik">dzielnik || wynik</string>
+    <string name="pop_up_zamykanie">Naciśnij jeszcze raz, aby zamknąć.</string>
 </resources>
