--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -7,4 +7,5 @@
     <string name="Wartosc_wejsciowa_poza_zasiengiem">قيمة الإدخال تتجاوز نطاق التحويل بواسطة خوارزمية التطبيق</string>
     <string name="wyniki_dla">نتائج ل</string>
     <string name="dzielnik_wynik">المقسوم||يؤدي</string>
+    <string name="pop_up_zamykanie">اضغط مرة أخرى للإغلاق.</string>
 </resources>
