--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="Wartosc_wej">The input value cannot be empty.</string>
     <string name="Wartosc_wejsciowa_poza_zasiengiem">Input value beyond the conversion range by the application algorithm.</string>
     <string name="dzielnik_wynik">divisor   ||   score</string>
+    <string name="pop_up_zamykanie">Press again to close.</string>
 </resources>
